build: configurando conexão com o banco de dados

--- a/todosimple/src/main/resources/application.properties
+++ b/todosimple/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+# Database Config
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/todosimple?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=c@t5RUn#N1ght
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
